# market-data-server

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  measure_latency.py  ws_test.py
clients/: fake_client.cpp
java-aggregator/: settings.gradle
java-aggregator/api-gateway/: build.gradle
java-aggregator/api-gateway/src/main/java/com/marketdata/gateway/: GatewayApplication.java  MarketDataController.java  MarketDataGraphQLController.java  MarketDataWebSocketHandler.java  SignalingController.java  WebSocketConfig.java
java-aggregator/api-gateway/src/main/java/com/marketdata/gateway/config/: GrpcConfig.java  WebSocketConfig.java
java-aggregator/api-gateway/src/main/java/com/marketdata/gateway/model/: AggregateDTO.java  SignalingMessage.java
java-aggregator/api-gateway/src/main/java/com/marketdata/gateway/service/: GrpcStreamManager.java  MarketDataClientService.java
java-aggregator/api-gateway/src/main/resources/: application.properties
java-aggregator/api-gateway/src/main/resources/graphql/: schema.graphqls
java-aggregator/app/: build.gradle
java-aggregator/app/src/main/java/com/marketdata/aggregator/: Aggregator.java  Candle.java  GrpcServer.java  MarketDataServiceImpl.java
java-aggregator/app/src/main/proto/: marketdata.proto
java-aggregator/gradle/: libs.versions.toml
java-aggregator/shared/: build.gradle
proto/: marketdata.proto  tick.proto
src/: benchmark_serialization.cpp  grpc_client.cpp  grpc_client.h  main.cpp  server.cpp  server.h
